# berry-rs

./: .gitignore  Cargo.toml  README.md  package.json
.cargo/: config.toml
.github/workflows/: CI.yml  build.yml  lint.yml  publish.yml  test-bindings.yml  test.yml
crates/berry-bench-bin/src/: main.rs
crates/berry-bench/benches/: parser_benchmarks.rs
crates/berry-compare/: Cargo.toml  README.md  parse-with-yarnpkg.js
crates/berry-compare-bin/: Cargo.toml
crates/berry-compare-bin/src/: main.rs
crates/berry-compare/src/: main.rs
crates/berry-core/: Cargo.toml
crates/berry-core/src/: ident.rs  lib.rs  locator.rs  lockfile.rs  package.rs  parse.rs
crates/berry-test/: Cargo.toml
crates/berry-test/src/: lib.rs
dev-docs/: BENCHMARKING.md  TODO.md
