[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "berry-compare-bin"
repository.workspace = true
version.workspace    = true

publish = false

[dependencies]
berry      = { workspace = true }
berry-test = { workspace = true }
clap       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
