[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "berry-compare"
repository.workspace = true
version.workspace = true

publish = false

[dependencies]
berry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = "1.0"

[dev-dependencies]
rstest = { workspace = true }

[lints]
workspace = true
