[package]
authors.workspace     = true
categories.workspace  = true
description.workspace = true
edition.workspace     = true
license.workspace     = true
name                  = "berry"
repository.workspace  = true
version               = "0.4.1"

[dependencies]
nom = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
