[package]
authors.workspace     = true
categories.workspace  = true
description.workspace = true
edition.workspace     = true
license.workspace     = true
name                  = "berry"
repository.workspace  = true
version               = "0.6.0"

[dependencies]
nom      = { workspace = true }
smallvec = { workspace = true }
memchr = { workspace = true }
rustc-hash = "2.0"

[lints]
workspace = true
