[package]
authors.workspace     = true
categories.workspace  = true
description.workspace = true
edition.workspace     = true
license.workspace     = true
name                  = "berry"
repository.workspace  = true
version               = "0.5.1-beta0-js.0"

[dependencies]
nom      = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
