[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "berry-test"
repository.workspace = true
version.workspace    = true

publish = false

[dependencies]
berry = { workspace = true }

[dev-dependencies]
rstest           = { workspace = true }
yarn-lock-parser = "0.12"

[lints]
workspace = true
